--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
 
 <div class="row">
 <div class="span3">
-<img class="hidden-phone" src="figures/Sig2022a.jpg" alt="Sparsity-Specific Code Optimization using Expression Trees"/>
+<img class="hidden-phone" src="figures/sig2022a.jpg" alt="Sparsity-Specific Code Optimization using Expression Trees"/>
 </div>
 
 <div class="span9">
@@ -136,7 +136,7 @@ with applications to physical simulation and interactive mesh deformation.</p>
 
 <div class="row">
 <div class="span3">
-<img class="hidden-phone" src="figures/Sig2022b.jpg" alt="Variational Quadratic Shape Functions for Polygons and Polyhedra"/>
+<img class="hidden-phone" src="figures/sig2022b.jpg" alt="Variational Quadratic Shape Functions for Polygons and Polyhedra"/>
 </div>
 
 <div class="span9">
@@ -601,7 +601,6 @@ We consider the problem of manufacturing free-form geometry with classical fabri
 <div class="row">
 <div class="span12">
 <h2 id="professional">Professional Activity</h2>
-
 
 
 <h3>Program Committees</h3>
