--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
     </p>   
     
     <p>
-        My research interests span geometry processing, computational fabrication and sparse linear solvers.
+        My research interests span geometry processing, simulation, numerics and sparse linear solvers.
     </p>
 
 
@@ -89,10 +89,12 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
 <div class="span12">
 <h2 id="publications">Publications</h2>
 
+
+<div class="row">
+<div class="span12">
 <h3>2022</h3>
-
-
-
+</div>
+</div>
 
 <div class="row">
 <div class="span3">
@@ -107,13 +109,11 @@ Philipp Herholz,
 <a href="https://web.uvic.ca/~teseo/">Teseo Schneider,</a>
 <a href="https://research.adobe.com/person/shoaib-kamil/">Shoaib Kamil,</a>
 <a href="https://cims.nyu.edu/gcl/daniele.html">Daniele Panozzo,</a>
-<a href="https://research.adobe.com/person/shoaib-kamil/">Shoaib Kamil,</a>
 <a href="https://igl.ethz.ch/people/sorkine/">Olga Sorkine-Hornung</a>
 
 <br/>
 <i class="icon-home"></i><a href="https://igl.ethz.ch/projects/sscoet/">Project page</a>
-<i class="icon-book"></i><a href="https://igl.ethz.ch/projects/sscoet/sscoet_main.pdf"
-">PDF</a>
+<i class="icon-book"></i><a href="https://igl.ethz.ch/projects/sscoet/sscoet_main.pdf">PDF</a>
 <i class="icon-wrench"></i><a href="https://github.com/PhHerholz/SymbolicLib">Code</a>
 <i class="icon-bold"></i><a href="bibtex.html#Herholz2022">BibTeX</a>
 <!--<i class="icon-chevron-right"></i><a href="https://doi.org/10.1111/cgf.13607">DOI</a>-->
@@ -163,8 +163,11 @@ Solving partial differential equations (PDEs) on geometric domains is an importa
 
 
 
-
+<div class="row">
+<div class="span12">
 <h3>2021</h3>
+</div>
+</div>
 
 
 <div class="row">
@@ -192,7 +195,11 @@ Approximating 3D shapes with piecewise developable surfaces is an active researc
 </div> 
 
 
+<div class="row">
+<div class="span12">
 <h3>2020</h3>
+</div>
+</div>
 
 
 <div class="row">
@@ -290,12 +297,11 @@ The discrete Laplace-Beltrami operator for surface meshes is a fundamental build
 </div>       
 </div> 
 
-
-
-
+<div class="row">
+<div class="span12">
 <h3>2019</h3>
-
-
+</div>
+</div>
 
 <div class="row">
 <div class="span3">
@@ -372,7 +378,11 @@ In this paper, we establish the underlying foundations of mechanisms that are co
 </div>       
 </div>  
 
+<div class="row">
+<div class="span12">
 <h3>2018</h3>
+</div>
+</div>
     
  <div class="row">
 <div class="span3">
@@ -419,6 +429,8 @@ We present OptiSpace, a system for the automated placement of perspectively corr
 </div> <!-- span9 -->
 </div> <!-- row -->    
 
+<div class="row">
+<div class="span12">
 <h3>2017</h3>
 </div>
 </div>
@@ -567,9 +579,13 @@ We consider the problem of manufacturing free-form geometry with classical manuf
 <p>
 A discrete Laplace-Beltrami operator is called perfect if it possesses all the important properties of its smooth counterpart. It is known which triangle meshes admit perfect Laplace operators and how to fix any other mesh by changing the combinatorics. We extend the characterization of meshes that admit perfect Laplacians to general polygon meshes. More importantly, we provide an algorithm that computes a perfect Laplace operator for any polygon mesh without changing the combinatorics, although, possibly changing the embedding. We evaluate this algorithm and demonstrate it at applications.</div>
  </div>    
-
+ </div>
+<!--
 <div class="row">
 <div class="span12">
+
+
+
 <h3>2014</h3>
 </div>
 </div>
@@ -593,8 +609,10 @@ A discrete Laplace-Beltrami operator is called perfect if it possesses all the i
 <p>
 We consider the problem of manufacturing free-form geometry with classical fabrication techniques such as mold casting or milling. We derive a set of constraints that guarantee manufacturability. A combined deformation and segmentation algorithm yields parts that satisfy the constraints. Our main observation is that allowing some deformation significantly reduces the number of resulting parts and, thus, extends the range of shapes that can be generated in practice. Examples of actual molds and the resulting manufactured shapes for several well-known meshes demonstrate our claims.
 </p>
-</div> <!-- span9 -->
-</div> <!-- row -->	
+</div> 
+</div> 
+
+-->
 
 <hr/>
 
