new profile and eg2023 added

--- a/bibtex.html
+++ b/bibtex.html
@@ -26,6 +26,18 @@
 
 <hr/>
 
+<pre id="Wolff2023">
+@article{Wolff:PersonalizedDynamicGarments:2022,
+doi = {https://doi.org/10.1111/cgf.14728},
+url = {https://onlinelibrary.wiley.com/doi/10.1111/cgf.14728},
+author = {Wolff, Katja and Herholz, Philipp and Ziegler, Verena and Link, Frauke and Brügel, Nico and Sorkine-Hornung, Olga},
+title = {Designing Personalized Garments with Body Movement},
+journal = {Computer Graphics Forum},
+note = {accepted for publication},
+year = {2022},
+}
+</pre>
+
 <pre id="Binninger2021">
 @article {BinningerVerhoeven:GaussThinning:2021,
 journal = {Computer Graphics Forum (proceedings of SGP 2021)},
