--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
 <div class="row">
 
 <div class="span2">
-<img src="figures/phil.jpg" alt=""/>
+<img src="figures/philipp.jpg" alt=""/>
 </div>
 
 <div class="span10">
@@ -83,11 +83,43 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
 
 
 
-<hr/>
-
 <div class="row">
 <div class="span12">
 <h2 id="publications">Publications</h2>
+
+<div class="row">
+<div class="span12">
+<h3>2023</h3>
+</div>
+</div>
+
+
+
+<div class="row">
+<div class="span3">
+<img class="hidden-phone" src="figures/eg2023.jpg" alt="Designing Personalized Garments with Body Movement"/>
+</div>
+
+<div class="span9">
+<h4>Designing Personalized Garments with Body Movement <small>Eurographics 2023 (CGF)</small></h4>
+<p>
+Katja Wolff,
+Philipp Herholz,
+Verena Ziegler,
+Frauke Link,
+Nico Brügel,
+<a href="https://igl.ethz.ch/people/sorkine/">Olga Sorkine-Hornung</a>
+
+<br/>
+<i class="icon-home"></i><a href="https://igl.ethz.ch/projects/dynamic-garments/">Project page</a>
+<i class="icon-book"></i><a href="https://igl.ethz.ch/projects/dynamic-garments/dynamic-garments-paper.pdf">PDF</a>
+<i class="icon-film"></i><a href="https://igl.ethz.ch/projects/dynamic-garments/dynamic-garments-video.mp4">Video</a>
+<i class="icon-bold"></i><a href="bibtex.html#Wolff2023">BibTeX</a>
+</p>
+<p>
+The standardized sizes used in the garment industry do not cover the range of individual differences in body shape for most people, leading to ill-fitting clothes, high return rates and overproduction. Recent research efforts in both industry and academia therefore focus on virtual try-on and on-demand fabrication of individually fitting garments. We propose an interactive design tool for creating custom-fit garments based on 3D body scans of the intended wearer. Our method explicitly incorporates transitions between various body poses to ensure a better fit and freedom of movement. The core of our method focuses on tools to create a 3D garment shape directly on an avatar without an underlying sewing pattern, and on the adjustment of that garment’s rest shape while interpolating and moving through the different input poses. We alternate between cloth simulation and rest shape adjustment based on stretch to achieve the final shape of the garment. At any step in the real-time process, we allow for interactive changes to the garment. Once the garment shape is finalized for production, established techniques can be used to parameterize it into a 2D sewing pattern or transform it into a knitting pattern.</p>  
+</div>       
+</div> 
 
 
 <div class="row">
@@ -622,6 +654,7 @@ We consider the problem of manufacturing free-form geometry with classical fabri
 
 
 <h3>Program Committees</h3>
+Eurographics STAR 2023<br/>
 Siggraph 2021, 2022<br/>
 Graphics Interface 2020, 2021<br/>
 Symposium on Geometry Processing 2020, 2021, 2022<br/>
@@ -633,7 +666,7 @@ Pacific Graphics 2020, 2021<br/>
 
 <footer class="footer" id="contact">
 <p class="pull-right"><a href="#">Back to top</a></p>
-<p>Contact: lastname [at] fb.com</p>
+<p>Contact: lastname@meta.com</p>
 </footer>
 
 </div> <!-- container -->
