--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
     <p>
         My research interests span geometry processing, simulation, numerics and sparse linear solvers.
     </p>
-
-
-<!--<p>Contact: m.eitz at tu-berlin dot de</p>-->
 </div> <!-- span9 -->
 </div> <!-- row -->
 	
@@ -92,7 +89,6 @@ padding-top: 60px; /* 60px to make the container go all the way to the bottom of
 <h3>2023</h3>
 </div>
 </div>
-
 
 
 <div class="row">
@@ -192,7 +188,6 @@ Philipp Herholz,
 Solving partial differential equations (PDEs) on geometric domains is an important component of computer graphics, geometry processing, and many other fields. Typically, the given discrete mesh is the geometric representation and should not be altered for simulation purposes. Hence, accurately solving PDEs on general meshes is a central goal and has been considered for various differential operators over the last years. While it is known that using higher-order basis functions on simplicial meshes can substantially improve accuracy and convergence, extending these benefits to general surface or volume tessellations in an efficient fashion remains an open problem. Our work proposes variationally optimized piecewise quadratic shape functions for polygons and polyhedra, which generalize quadratic P2 elements, exactly reproduce them on simplices, and inherit their beneficial numerical properties. To mitigate the associated cost of increased computation time, particularly for volumetric meshes, we introduce a custom two-level multigrid solver which significantly improves computational performance.</p>  
 </div>       
 </div> 
-
 
 
 <div class="row">
@@ -654,10 +649,10 @@ We consider the problem of manufacturing free-form geometry with classical fabri
 
 
 <h3>Program Committees</h3>
-Eurographics STAR 2023<br/>
+Eurographics STAR 2023, 2024<br/>
 Siggraph 2021, 2022<br/>
 Graphics Interface 2020, 2021<br/>
-Symposium on Geometry Processing 2020, 2021, 2022<br/>
+Symposium on Geometry Processing 2020, 2021, 2022, 2024<br/>
 Pacific Graphics 2020, 2021<br/>
 	</div> <!-- span12 -->
 </div> <!-- row --> 
